--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # the db will be stored in a file that persist across app restarts
 spring.h2.console.enabled = true
 spring.h2.console.path = /console
-spring.datasource.url = jdbc:h2:file:~/eventplannerapplication
+spring.datasource.url = jdbc:h2:file:~/eventplanner
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.driver-class-name = org.h2.Driver
