--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto = update
 # set up queries for loading users and roles
 spring.queries.users-query = select username, password, active from user where username=?
 spring.queries.roles-query = select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
+
+# setting to stop reference chain failing
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
