--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # the db will be stored in a file that persist across app restarts
 spring.h2.console.enabled = true
 spring.h2.console.path = /console
-spring.datasource.url = jdbc:h2:file:~/eventplanner
+spring.datasource.url = jdbc:h2:file:~/event
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.driver-class-name = org.h2.Driver
@@ -12,6 +12,8 @@ spring.jpa.show-sql = true
 
 # update ddl when app starts
 spring.jpa.hibernate.ddl-auto = update
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
 # set up queries for loading users and roles
 spring.queries.users-query = select username, password, active from user where username=?
