--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
+# SET HERE CONFIGURATIONS FOR DATABASE CONNECTIONS
+#MARIADB CONFIGURATION
+#spring.datasource.url=jdbc:mariadb://localhost:3307/eventsplanner
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+
 # configure data source
 # the db will be stored in a file that persist across app restarts
+#H2 CONFIG
 spring.h2.console.enabled = true
 spring.h2.console.path = /console
-spring.datasource.url = jdbc:h2:file:~/event
+spring.datasource.url = jdbc:h2:file:~/eventplanning
 spring.datasource.username = sa
 spring.datasource.password =
 spring.datasource.driver-class-name = org.h2.Driver
